--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=notification-consumer-service
 server.port= 8082
 
-spring.kafka.consumer.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=notification-dispatchers-v1
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
@@ -10,7 +9,9 @@ spring.kafka.consumer.properties.spring.json.value.default.type=com.carGo.notifi
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=lakshyalath@gmail.com
-spring.mail.password=${MAIL_PASSWORD}
+spring.mail.password=lakshya5911
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094,localhost:9095
 
