--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port= 8082
 spring.kafka.consumer.group-id=notification-dispatchers-v1
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.value.default.type=com.carGo.notification_consumer_service.Event.BookingConfirmationEvent
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.carGo.notification_consumer_service.*\, com.lakshya.car_go.*
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -13,5 +13,5 @@ spring.mail.password=lakshya5911
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094,localhost:9095
+spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9094,localhost:9096,localhost:9098
 
