update.properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=com.carGo.notifica
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=lakshyalath@gmail.com
-spring.mail.password=lakshya5911
+spring.mail.username=carGoOfficial.gmai.com@gmail.com
+spring.mail.password=rnhn srpb aqit hykw
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
