--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,19 @@ server.port= 8082
 spring.kafka.consumer.group-id=notification-dispatchers-v1
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=com.carGo.notification_consumer_service.*\, com.lakshya.car_go.*
+# Add this line:
+spring.kafka.consumer.properties.spring.json.value.default.type=com.carGo.notification_consumer_service.Event.BookingConfirmationEvent
+spring.kafka.consumer.properties.spring.json.type.mapping=event:com.carGo.notification_consumer_service.Event.BookingConfirmationEvent
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=carGoOfficial.gmai.com@gmail.com
-spring.mail.password=rnhn srpb aqit hykw
+spring.mail.username=cargounofficial@gmail.com
+spring.mail.password=dayrkqlhrrdjeuul
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.debug=true
 
 spring.kafka.consumer.bootstrap-servers=localhost:9092,localhost:9094,localhost:9096,localhost:9098
 
